--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
   			<div class="col-md-6 column">
                <img   src='{{logoimage.src}}' /> 
             </div> 
-          <div class="col-md-6 col-xs-12 col-sm-12 column">
+          <div class="col-md-6 col-xs-12 col-sm-12">
 		      <mat-nav-list  >
 		      <ul  class="main-nav"> 	
 		      <li  class="menuitems"   *ngFor="let i of folders">	
