--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <mat-card class='header'>
- 	
-  	<mat-card-header>
 
-  		<div class="row">
+
+
+	<!-- <div class="row">
   			<div class="col-md-6 column">
                <img   src='{{logoimage.src}}' /> 
             </div> 
@@ -15,8 +15,38 @@
 		      </ul>
 		    </mat-nav-list>
          </div>
-        </div>
- 	</mat-card-header>	
+		</div> -->
+	<div class="example3">
+		<nav class="navbar navbar-inverse navbar-static-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar3">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand">
+						<img src='{{logoimage.src}}' />
+					</a>
+				</div>
+				<div id="navbar3" class="navbar-collapse collapse">
+
+
+					<ul class="nav navbar-nav navbar-right">
+						<li class="active">
+							<a href="#">EU</a>
+						</li>
+						<li>
+							<a href="#">Global</a>
+						</li>
+					</ul>
+				</div>
+				<!--/.nav-collapse -->
+			</div>
+			<!--/.container-fluid -->
+		</nav>
+	</div>
 
 
 </mat-card>
